maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:2: error: Missing closing brace `}' assumed here
override def run() {var x:Int=0; while (!isOverBaggle) {v=random3(); match 
^RandomMouseMaze:2: error: expected start of definition
override def run() {var x:Int=0; while (!isOverBaggle) {v=random3(); match 
         ^